Fix too small font size in big effect descriptions

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -566,7 +566,8 @@ hr
     flex-direction: column
     gap: 1em
 
-    font-size: 12px
+    .small &
+      font-size: 12px
 
     .effect-tags
       $scale: 0.8
